# OpenVLBI

./: .gitignore  .travis.yml  CITATION.cff  CMakeLists.txt  ChangeLog  Doxyfile.cmake  FindDSP.cmake  FindVLBI.cmake  INSTALL  OpenDSP.spec  OpenVLBI-bin.spec  OpenVLBI-data.spec  OpenVLBI-doc.spec  OpenVLBI.spec  QtCGI.cpp  QtCGI.h  README.md  files.libopenvlbi-dev.cmake  files.libopenvlbi.cmake  getline.c  getline.h  json.c  mjs.h  openvlbi.iss.cmake  openvlbi.py  openvlbi_server.cpp  threads.h  vlbi_client.cpp  vlbi_client.h  vlbi_client_dummy.cpp  vlbi_client_dummy.h  vlbi_client_indi.cpp  vlbi_client_indi.h  vlbi_client_json.cpp  vlbi_client_json.h  vlbi_server.c  vlbi_server.cpp  vlbi_server.h  vlbi_server_cgi.cpp  vlbi_server_cgi.h  (+8 more)
.circleci/: config.yml
.github/: FUNDING.yml
.github/docker/: Dockerfile.fedora  Dockerfile.ubuntu
.github/workflows/: debian.yml  default.yml  docker-fedora.yml  docker-ubuntu.yml  docker.yml  fedora.yml  linux.yml  ubuntu.yml
api/: ##.html  #.html  _building.html  _implementation.html  _open_v_l_b_i.html  _references.html  annotated.html  base64_8h.html  base64_8h_source.html  base64__luts_8h.html  base64__luts_8h_source.html  baseline_8h.html  baseline_8h_source.html  baselinecollection_8h.html  baselinecollection_8h_source.html  class_baseline_collection-members.html  class_baseline_collection.html  class_node_collection-members.html  class_node_collection.html  class_v_l_b_i_baseline-members.html  class_v_l_b_i_baseline.html  class_v_l_b_i_client-members.html  class_v_l_b_i_client.html  class_v_l_b_i_collection-members.html  class_v_l_b_i_collection.html  class_v_l_b_i_node-members.html  class_v_l_b_i_node.html  classes.html  collection_8h.html  collection_8h_source.html  dir_186449405728120021fb8321521b3376.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_6adae754124d051069c4e713c10c7d51.html  dir_8af83c0dc83a45a35ca6968cdc29a7af.html  dir_a072db986009df1f13aaceebcdf3b910.html  dir_d22a663171913c6a533612128b2022e3.html  dir_da028f7fefc33e145ca44902de6af95c.html  dsp_8h.html  dsp_8h_source.html  files.html  (+50 more)
api/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_2.js  classes_3.js  defines_0.js  defines_4.js  defines_5.js  defines_6.js  files_0.js  files_1.js  files_3.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  (+28 more)
cat/: index.txt
cat/gamma/: Pr140.txt  Pr142.txt  ac227.txt  ag106.txt  ag108.txt  ag108m.txt  ag110m.txt  ag111.txt  al26.txt  al28.txt  am241.txt  ar41.txt  as70.txt  as73.txt  as74.txt  as76.txt  as77.txt  au194.txt  au195.txt  au196.txt  au198.txt  au199.txt  ba131.txt  ba133.txt  ba139.txt  ba140.txt  ba141.txt  ba142.txt  be7.txt  bi205.txt  bi207.txt  bk250.txt  br75.txt  br76.txt  br77.txt  br82.txt  br83.txt  br84.txt  ca49.txt  cd109.txt  (+217 more)
cat/iau/: 13CO.txt  15NH3.txt  3HeII.txt  C17O.txt  C18O.txt  C2H.txt  C3H2.txt  CH.txt  CH2OH.txt  CH3OH.txt  (+21 more)
cat/iau-ex/: 13CO.txt  13CS.txt  3He+.txt  C17O.txt  C18O.txt  C2H.txt  C34S.txt  C3H2.txt  CCS.txt  CH+.txt  CH.txt  CH3CCH.txt  CH3CN.txt  CH3OH.txt  CI.txt  CN.txt  CO.txt  CS.txt  DCN.txt  DCO+.txt  DI.txt  H13CN.txt  H13CO+.txt  H15NC.txt  H213CO.txt  H218O.txt  H2CO.txt  H2D+.txt  H2O.txt  H2S.txt  H3+.txt  H3O+.txt  HC15N.txt  HC3N.txt  HCN.txt  HCO+.txt  HCl.txt  HDO.txt  HI.txt  HN13C.txt  (+19 more)
cmake_modules/: FindCFITSIO.cmake  FindFFTW3.cmake  FindINDI.cmake  FindINDICLIENT.cmake  FindJSON-C.cmake  FindJSONPARSER.cmake  FindPNG.cmake
debian/: build.deb.sh  changelog  control  control.libopenvlbi  control.libopenvlbi-dev  control.openvlbi  control.openvlbi-bin  copyright  files  files.libopenvlbi  files.openvlbi-bin  libopendsp-dev.install  libopendsp1.install  libopenvlbi-dev.install  libopenvlbi-dev.links  libopenvlbi-doc.install  libopenvlbi.install  libopenvlbi1.install  openvlbi-data.install  rules
docs/: _implementation.html  _open_v_l_b_i.html  _references.html  annotated.html  class_v_l_b_i_1_1_server-members.html  class_v_l_b_i_1_1_server.html  classes.html  dir_17de173eec4d89796f8de80cf146d2f9.html  dir_1c667e1a424965b25000ba8d17d142a4.html  dir_311c40ef20558deef668ce7ba228cbf7.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_4fef79e7177ba769987a8da36c892c5f.html  dir_730acf85c64e68a6d16a984062877e3c.html  dir_8524c1243b196c9389e80f952c0ae179.html  dir_af12a909da3b2345fb47217d056428c4.html  dir_ba0f80937f66464bb667158debfefade.html  dir_bb57173e5dbda67a2e31212fabe3d36a.html  dir_d22a663171913c6a533612128b2022e3.html  dir_f5016130e74dd649bf099b070ded98c2.html  dsp_8h.html  dsp_8h_source.html  files.html  fits_8h_source.html  fits__extensions_8h_source.html  fitsidi_8h_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_func.html  globals_g.html  globals_j.html  globals_l.html  globals_m.html  globals_o.html  globals_p.html  (+83 more)
dsp/: align.c  buffer.c  convert.c  convolution.c  dsp.h.cmake  feature.c  fft.c  file.c  filters.c  fits.c  fits.h  fits_extensions.h  fitsidi.h  recon.c  sdfits.h  signals.c  stats.c  stream.c
obj-i686-linux-gnu/: dsp.h
scripts/: build.sh  coverage  coverage.json  determine-os.sh  idft.json  json_to_image.sh  json_to_png.sh  node1  node2  node3  node4  raw.json  sine.sh  test.b64  test.cfg  test.json  test.sh  test_client.sh  vlbi_add_node  vlbi_cmd  vlbi_del_node  vlbi_server
vlbi/: .travis.yml  align.c  astro.c  base64.c  base64.h  base64_luts.h  baseline.cpp  baseline.h  baselinecollection.cpp  baselinecollection.h  collection.cpp  collection.h  feature.cpp  file.c  fits_extensions.h  instancecollection.cpp  instancecollection.h  json.c  json.h  matrix.c  matrix.cpp  modelcollection.cpp  modelcollection.h  node.cpp  node.h  nodecollection.cpp  nodecollection.h  stream.cpp  sync.cpp  time.c  vlbi.h.cmake
(+806 files in other folders)
